# linear_ip

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
doc/: CMakeLists.txt  Doxyfile.in  mainpage.dox
example/: CMakeLists.txt  example.cpp
include/: lp.h  lp_impl.h
src/: lp.cpp  lp_impl.cpp
test/: CMakeLists.txt  test_lp.cpp  test_lp_impl.cpp
